# extrema_infra

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust_ci.yml  rust_clippy.yml
docs/: usage.md
examples/: complex_strategy_example.rs  empty_algo_init.rs  empty_strategy_example.rs  hyperliquid_api_usage_example.rs  multi_algo_example.rs  multi_strategy_example.rs  single_timer_example.rs  test_example.rs  websocket_acc_bal_and_pos_example.rs  websocket_private_account_example.rs
src/: arch.rs  errors.rs  lib.rs  prelude.rs
src/arch/: infra_core.rs  market_assets.rs  strategy_base.rs  task_execution.rs  traits.rs
src/arch/infra_core/: env_builder.rs  env_core.rs  env_mediator.rs
src/arch/market_assets/: api_data.rs  api_general.rs  base_data.rs  exchange.rs  market_core.rs
src/arch/market_assets/api_data/: account_data.rs  price_data.rs  utils_data.rs
src/arch/market_assets/exchange/: binance.rs  cex_clients.rs  gate.rs  hyperliquid.rs  lob_clients.rs  okx.rs  prelude.rs  secret.rs
src/arch/market_assets/exchange/binance/: api_key.rs  api_utils.rs  binance_cm_futures_cli.rs  binance_rest_msg.rs  binance_spot_cli.rs  binance_um_futures_cli.rs  binance_ws_msg.rs  config_assets.rs  schemas.rs
src/arch/market_assets/exchange/binance/schemas/: cm_futures_rest.rs  cm_futures_ws.rs  spot_rest.rs  spot_ws.rs  um_futures_rest.rs  um_futures_ws.rs  wallet_rest.rs
src/arch/market_assets/exchange/binance/schemas/cm_futures_rest/: account_balance.rs  exchange_info.rs  open_interest_statistics.rs
src/arch/market_assets/exchange/binance/schemas/cm_futures_ws/: lob.rs
src/arch/market_assets/exchange/binance/schemas/spot_rest/: account_balance.rs  exchange_info.rs  order_history.rs  ticker.rs  trade_order.rs
src/arch/market_assets/exchange/binance/schemas/spot_ws/: account_order.rs
src/arch/market_assets/exchange/gate/: api_key.rs  api_utils.rs  config_assets.rs  gate_cli.rs  gate_delivery_cli.rs  gate_futures_cli.rs  gate_rest_msg.rs  gate_spot_cli.rs  gate_uni_cli.rs  gate_ws_msg.rs  schemas.rs
src/arch/market_assets/exchange/gate/schemas/: delivery_rest.rs  futures_rest.rs  futures_ws.rs  rest.rs  spot_rest.rs  uni_rest.rs  wallet_rest.rs  ws.rs
src/arch/market_assets/exchange/hyperliquid/: api_key.rs  api_utils.rs  auth.rs  config_assets.rs  hyperliquid_cli.rs  hyperliquid_rest_msg.rs  hyperliquid_ws_msg.rs
src/arch/market_assets/exchange/hyperliquid/schemas/: rest.rs  ws.rs
src/arch/market_assets/exchange/okx/: api_key.rs  api_utils.rs  config_assets.rs  okx_cli.rs  okx_rest_msg.rs  okx_ws_msg.rs  schemas.rs
src/arch/market_assets/exchange/okx/schemas/: rest.rs  ws.rs
src/arch/strategy_base/: handler.rs  hlist_core.rs  strategy_group.rs  strategy_module.rs
src/arch/strategy_base/command/: ack_handle.rs  command_core.rs
src/arch/strategy_base/handler/: alt_events.rs  cex_events.rs  event_mask.rs  handler_core.rs  lob_events.rs
src/arch/task_execution/: register_alt.rs  register_ws.rs  task_alt.rs  task_general.rs  task_ws.rs
src/arch/task_execution/register_alt/: model_onnx.rs  model_zmq.rs
src/arch/task_execution/register_ws/: binance.rs  gate.rs  hyperliquid.rs  okx.rs
src/arch/traits/: conversion.rs  market_cex.rs  market_lob.rs  strategy.rs
src/infra_core/: env_builder.rs  env_core.rs  env_mediator.rs  mod.rs
src/market_assets/: account_data.rs  api_general.rs  api_genral.rs  base_data.rs  market_core.rs  market_data.rs  mod.rs  price_data.rs  rules_data.rs  utils_data.rs
src/market_assets/api_data/: account_data.rs  price_data.rs  utils_data.rs
src/market_assets/cex/: mod.rs  prelude.rs
src/market_assets/cex/binance/: api_key.rs  api_utils.rs  binance_cm_futures_cli.rs  binance_rest_msg.rs  binance_spot_cli.rs  binance_um_futures_cli.rs  binance_ws_msg.rs  config_assets.rs  mod.rs  ws_msg_general.rs
src/market_assets/cex/binance/cm_futures_rest/: account_balance.rs  exchange_info.rs  mod.rs  open_interest_statistics.rs
src/market_assets/cex/binance/um_futures_rest/: account_balance.rs  exchange_info.rs  funding_rate.rs  funding_rate_info.rs  mod.rs  open_interest_statistics.rs
src/market_assets/cex/binance/um_futures_ws/: agg_trades.rs  candles.rs  event_bal_and_pos_update.rs  mod.rs
src/market_assets/cex/okx/: api_cli.rs  api_key.rs  api_utils.rs  config_assets.rs  mod.rs  okx_cli.rs  okx_rest_msg.rs  okx_ws_msg.rs
src/market_assets/cex/okx/rest/: account_balance.rs  account_positions.rs  ct_current_lead_traders.rs  ct_public_current_subpositions.rs  ct_public_lead_trader_stats.rs  ct_public_lead_traders.rs  ct_public_subpositions_history.rs  current_lead_traders.rs  instruments.rs  market_ticker.rs  mod.rs  public_current_subpositions.rs  public_instruments.rs  public_lead_trader_stats.rs  public_lead_traders.rs  trade_order.rs
src/market_assets/cex/okx/ws/: account_order.rs  account_order_update.rs  mod.rs  trades.rs
src/strategy_base/: hlist_core.rs  mod.rs
src/strategy_base/command/: ack_handle.rs  command_core.rs  mod.rs
src/strategy_base/event_notify/: board_cast_channels.rs  cex_notify.rs  mod.rs
src/strategy_base/handler/: alt_events.rs  cex_events.rs  handler_core.rs  mod.rs
src/task_execution/: alt_register.rs  general_register.rs  mod.rs  register_alt.rs  register_ws.rs  task_alt.rs  task_general.rs  task_ws.rs  ws_register.rs
src/traits/: conversion.rs  market_cex.rs  mod.rs  strategy.rs
tests/: strategy_runtime.rs
(+123 files in other folders)
