[package]
name = "extrema_infra"
version = "0.1.0"
edition = "2024"

[lib]
name = "extrema_infra"
path = "src/lib.rs"

[dependencies]
# Networking & async
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "gzip"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28.0"
futures = "0.3.31"
futures-util = "0.3.31"
zeromq = "0.4.1"

# Data & Feature processing
polars = { version = "0.52.0", default-features = false }

# Parsing & Serialization
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simd-json = "0.17.0"

# Cryptography & Encoding
hmac = "0.12.1"
sha2 = "0.10.9"
sha3 = "0.10.8"
data-encoding = "2.10.0"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }

# Logging & Tracing
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Environment & Error handling
dotenvy = "0.15.7"
thiserror = "2.0.18"

[features]
default = []

all = [
    "hyperliquid",
    "binance",
    "gate",
    "okx",
]

lob_clients = [
    "hyperliquid",
    "binance",
    "gate",
    "okx",
]

hyperliquid = []
binance = []
gate = []
okx = []
